# batch-util

./: .flake8  .gitignore  README.md  batch.py  batch_run.py  pyproject.toml  reqirements.txt  test.fish  test_batch.py  test_batch_run.py  test_fixture.fish  tests.py
.github/workflows/: test.yml
manual_tests/: test.fish  test_fixture.fish
tests/: test_batch_run.py
