[tool.poetry]
name = "batch"
version = "0.1.0"
description = ""
authors = ["Antoine Gallix <antoine@antoine-gallix.me>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
batch = 'batch:batch'